--- a/Directline/test-output/index.html
+++ b/Directline/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Suite">
-                    <span>F:\DirectLineProject\Directline\searchXML\testng.xml</span>
+                    <span>C:\Users\TONNY NEETHU\git\TNS\Directline\searchXML\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -135,7 +135,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">F:\DirectLineProject\Directline\searchXML\testng.xml</span>
+            <span class="header-content">C:\Users\TONNY NEETHU\git\TNS\Directline\searchXML\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -188,7 +188,7 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'vehicle')
 data.setCell(0, 2, 'com.searchtest.Searchvehicle')
-data.setCell(0, 3, 6301);
+data.setCell(0, 3, 6357);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
@@ -226,19 +226,19 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="configuration-class before">
                 <span class="method-name">setup</span>
-                <span class="method-start">642 ms</span>
+                <span class="method-start">640 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">vehicle</span>
-                <span class="method-start">6977 ms</span>
+                <span class="method-start">6100 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">teardownMethod([TestResult name=vehicle status=SUCCESS method=Searchvehicle.vehicle()[pri:0, instance:com.searchtes...)</span>
-                <span class="method-start">13280 ms</span>
+                <span class="method-start">12458 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">14007 ms</span>
+                <span class="method-start">13154 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
